v.0.0.8 First Test on a minecraft server there are several problems that have to be fixed immediately